<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_new_envelope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonTitleNewClicked"
        android:text="@string/new_envelope_button"
        app:layout_constraintBottom_toTopOf="@+id/load_envelope_button"
        app:layout_constraintEnd_toEndOf="@+id/text_view_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <Button
        android:id="@+id/load_envelope_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonTitleLoadClicked"
        android:text="@string/load_envelope_button"
        app:layout_constraintBottom_toTopOf="@+id/button_settings"
        app:layout_constraintEnd_toEndOf="@+id/button_new_envelope"
        app:layout_constraintStart_toStartOf="@+id/button_new_envelope"
        app:layout_constraintTop_toBottomOf="@+id/button_new_envelope" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonTitleSettingsClicked"
        android:text="@string/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/load_envelope_button"
        app:layout_constraintStart_toStartOf="@+id/load_envelope_button"
        app:layout_constraintTop_toBottomOf="@+id/load_envelope_button" />

    <TextView
        android:id="@+id/text_view_title"
        style="@style/TextAppearance.MdcTypographyStyles.Headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_text"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_new_envelope"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
