<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_amp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_create_amp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:onClick="onButtonAmpMakerCreate"
        android:text="@string/confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel_amp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_min_amp" />

    <Button
        android:id="@+id/button_cancel_amp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:onClick="onButtonAmpMakerCancel"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="@+id/button_create_amp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_create_amp"
        app:layout_constraintTop_toTopOf="@+id/button_create_amp" />

    <TextView
        android:id="@+id/text_view_amp_title"
        style="@style/TextAppearance.MdcTypographyStyles.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/amplitude_envelope"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_amp_function"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_start_amp"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/start_amp_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_amp_length"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout_amp_length"
        app:layout_constraintEnd_toStartOf="@+id/text_input_layout_end_amp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_amp_function">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_start_amp"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_end_amp"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/end_amp_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_start_amp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_input_layout_start_amp"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout_amp_cycles"
        app:layout_constraintTop_toTopOf="@+id/text_input_layout_start_amp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_end_amp"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_amp_function"
        style="@style/TextAppearance.MdcTypographyStyles.DropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/pick_a_function_text"
        android:labelFor="@id/auto_complete_text_view_amp_function"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_start_amp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_amp_title">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text_view_amp_function"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_amp_length"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/length_seconds_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_min_amp"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout_min_amp"
        app:layout_constraintEnd_toStartOf="@+id/text_input_layout_amp_cycles"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_start_amp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_amp_length"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_min_amp"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/min_amp_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/button_create_amp"
        app:layout_constraintEnd_toEndOf="@+id/button_create_amp"
        app:layout_constraintEnd_toStartOf="@+id/text_input_layout_max_amp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_amp_length">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_min_amp"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_max_amp"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/max_amp_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_min_amp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_input_layout_min_amp"
        app:layout_constraintStart_toStartOf="@+id/button_cancel_amp"
        app:layout_constraintTop_toTopOf="@+id/text_input_layout_min_amp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_max_amp"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_amp_cycles"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/cycle_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_amp_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_input_layout_amp_length"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout_max_amp"
        app:layout_constraintTop_toTopOf="@+id/text_input_layout_amp_length">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_amp_cycles"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>